# mcp-ebook-read

./: .gitignore  AGENTS.md  MVP_STATUS.md  README.md  pyproject.toml
.github/workflows/: publish-pypi-on-tag.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
src/mcp_ebook_read/: __init__.py  errors.py  logging.py  network.py  operations.py  outline.py  server.py  service.py  tool_descriptions.py
src/mcp_ebook_read/benchmark/: __init__.py  concurrency.py  ingest.py  parser_engines.py  paths.py  pdf_formula.py  reading.py
src/mcp_ebook_read/index/: vector.py
src/mcp_ebook_read/parsers/: epub_ebooklib.py  pdf_docling.py  pdf_grobid.py  pdf_pypdfium2.py
src/mcp_ebook_read/render/: pdf_images.py  pdf_render.py  pdf_visuals.py
src/mcp_ebook_read/schema/: models.py
src/mcp_ebook_read/store/: catalog.py
src/mcp_ebook_read/workers/: __init__.py  pdf_parse.py  pdf_visuals.py
tests/: test_benchmark_concurrency.py  test_benchmark_ingest.py  test_benchmark_parser_engines.py  test_benchmark_paths.py  test_benchmark_pdf_formula.py  test_benchmark_reading.py  test_catalog_store.py  test_errors.py  test_index_vector.py  test_integration_e2e.py  test_logging.py  test_network.py  test_operations_registry.py  test_outline.py  test_parsers_epub_ebooklib.py  test_parsers_pdf_docling.py  test_parsers_pdf_grobid.py  test_parsers_pdf_pypdfium2.py  test_render_pdf_images.py  test_render_pdf_render.py  test_render_pdf_visuals.py  test_server_startup.py  test_server_tools.py  test_service_core.py  test_service_pdf_visual_diagnostics.py  test_service_read.py  test_service_startup.py  test_version.py  test_workers_stdout.py
