[project]
name = "mcp-ebook-read"
version = "0.2.5"
description = "MCP server for reading and searching EPUB/PDF documents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "mcp>=1.27.2",
  "pydantic>=2.13.4",
  "httpx>=0.28.1",
  "docling>=2.96.1",
  "pix2text>=1.1.4",
  "ebooklib>=0.19",
  "lxml>=6.1.1",
  "pymupdf>=1.27.2.3",
  "qdrant-client[fastembed]>=1.18.0",
  "fastembed>=0.8.0",
]

[project.scripts]
mcp-ebook-read = "mcp_ebook_read.server:cli_entry"
mcp-ebook-formula-benchmark = "mcp_ebook_read.benchmark.pdf_formula:main"
mcp-ebook-reading-benchmark = "mcp_ebook_read.benchmark.reading:main"

[dependency-groups]
dev = [
  "ruff>=0.15.15",
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_ebook_read"]

[tool.ruff]
target-version = "py313"
extend-exclude = ["extern"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "e2e: end-to-end integration tests requiring external services and sample docs",
]
